--- a/style.css
+++ b/style.css
@@ -1,38 +1,20 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 95vw;
+  height: 95vh;
 }
-.mainArea h1 {
-  position: absolute;
-  top: 10%;
-  left: 38%;
-  font-family: "Noto Sans TC", sans-serif;
-  font-size: 70px;
+
+.dropdown {
+  width: 80%;
+  margin: 10% auto;
 }
-.mainArea select {
-  position: absolute;
-  top: 20%;
-  left: 35%;
-  font-family: "Noto Sans TC", sans-serif;
+.dropdown .btn {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
 }
-.mainArea option {
-  font-size: 20px;
-  font-family: "Noto Sans TC", sans-serif;
-}
-.mainArea .card {
-  background-color: rgb(220, 191, 255);
-  position: absolute;
-  top: 40%;
-  left: 35%;
-}
-.mainArea p {
-  color: #000;
-  font-family: "Noto Sans TC", sans-serif;
-}
-.mainArea .fa-sun {
-  position: absolute;
-  top: 20%;
-  left: 60%;
-  font-size: 130px;
-  color: yellow;
+
+.area {
+  width: 80%;
+  margin: 10% auto;
 }/*# sourceMappingURL=style.css.map */
